<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PSX KMI Tracker</string>
    <string name="widget_name">PSX KMI Indices</string>
    <string name="widget_description">Live KMI30 / KMI All Share index values with per-stock move alerts</string>
    <string name="desc_specific_alert">Set specific alert</string>
    <string name="label_filter_sector">Filter by sector:</string>
    <string name="label_notify_up">Notify me when a stock goes UP by:</string>
    <string name="label_notify_down">Notify me when a stock goes DOWN by:</string>
    <string name="title_specific_alert">Alert threshold for %1$s</string>
    <string name="label_up_move">Alert on UP move</string>
    <string name="label_down_move">Alert on DOWN move</string>
</resources>
